--- a/pinterest/package.json
+++ b/pinterest/package.json
@@ -8,8 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "firebase": "^9.6.10",
+    "firebaseui": "^6.0.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-stack-grid": "^1.2.2",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
